--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
   <name>warmingup</name>
   
   <dependencies>
-  	<!-- https://mvnrepository.com/artifact/junit/junit -->
+	<dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	    <version>1.10</version>
+	</dependency>
+  
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
