--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
             <version>2.23.4</version>
             <scope>test</scope>
         </dependency>
-
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.18.2</version>
+		</dependency>
     </dependencies>
 </project>
